on 2nd check signup image had wrong id in style so was on wrong pages, fixed and aligned code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,7 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h1,
-h2,
-h3 {
+h1, h2, h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -55,7 +53,7 @@ header a {
     list-style-type: none;
 }
 
-#menu>li {
+#menu > li {
     margin-bottom: 1em;
 }
 
@@ -90,9 +88,13 @@ nav {
 
 /* Main content */
 main {
-    /* Make main element take up any surplus space to push footer down */
+    /* Enlarge main element to push footer down*/
     flex: 1 0 auto;
+    /* Add margin at the top to prevent content from being covered by the header */
     margin-top: 47px;
+    /* Enable flex properties for child elements */
+    display: flex;
+    flex-direction: column;
 }
 
 /* Hero section */
@@ -115,8 +117,7 @@ main {
     padding-left: 10px;
 }
 
-#cover-text>h2,
-#cover-text>h3 {
+#cover-text > h2, #cover-text > h3 {
     color: #ffffff;
 }
 
@@ -132,8 +133,8 @@ main {
     font-size: 280%;
 }
 
-#benefits-physical>div,
-#benefits-mental>div {
+#benefits-physical > div,
+#benefits-mental > div {
     line-height: 20px;
     margin-bottom: 20px;
 }
@@ -164,34 +165,35 @@ main {
     justify-content: center;
 }
 
+/* Meetup Times section */
 #times {
-    background: url("../images/dublin-city.webp") no-repeat center / cover;
-    /* covers responsive design without the need for a media query */
+    background: url('../images/dublin-city.webp') no-repeat center/cover;
+    /* Handles responsivity without the need for a media query */
     display: flex;
     flex-wrap: wrap;
 }
 
 #times div {
     color: #fafafa;
-    background-color: rgba(0, 0 ,0, .6);
+    background-color: rgba(0, 0, 0, .6);
     padding: 15px;
     text-align: center;
     /* This will not wrap on screens of less than 400px wide.
     Each div will expand to fill the available space on its row */
     flex-basis: 200px;
     flex-grow: 1;
-    /* Creates a grid of meetup time divs over the background image */
+    /* Creates a grid of meetup time dives over the background image */
     border: 2px solid white;
 }
 
 #times h3 {
-    /* Overrides the heading colour set in general styles */
+    /* Override the heading colour set in general styles */
     color: #fafafa;
 }
 
 /* Gallery page */
 #photos img {
-    width:100%;
+    width: 100%;
     line-height: 1em;
 }
 
@@ -199,48 +201,55 @@ main {
     line-height: 0;
 }
 
-
-/* Signup Page */
-main {
-    background: url(../images/signup-image.webp) no-repeat center / cover;
+/* Form */
+#signup {
+    background-image: url("../images/signup-image.webp");
+    background-size: cover;
     background-position: 75%;
+    padding: 20px 10% 0 10%;
     flex-grow: 1;
 }
 
+
 #signup-form {
     color: #ffffff;
-    background-color: rgba(60, 60 ,60, .6);
+    background-color: rgba(60, 60, 60, 0.6);
     padding: 30px;
-    margin: 20px 10%;
 }
 
-#signup-form h2 {
-    color:#fafafa
+
+#signup-form>h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
 }
+
 
 .text-input {
     background: transparent;
-    line-height: 25px;
-    padding: 0 5px;
-    margin-top: 5px;
-    margin-bottom: 20px;
     color: #fafafa;
-    border: 1px solid #fafafa; 
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
     border-radius: 2px;
+    padding: 0 5px;
 }
 
+
 .radio-buttons {
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
+
 .join-button {
+    margin-top: 20px;
     border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
     background-color: #454b1b;
     color: #fafafa;
-    font-size: 100%;
-    margin-top: 20px;
-    padding: 15px 32px;
 }
 
 /* Footer */
@@ -258,16 +267,16 @@ main {
     color: #3a3a3a;
 }
 
-/* Media query: larger or landscape phones (576px and up) */
+/* Media query: large or landscape phones (576px and up) */
 @media screen and (min-width: 576px) {
-#photos {
-            column-count: 2;
-            column-gap: 0;
+    #photos {
+        column-count: 2;
+        column-gap: 0;
     }
 }
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
-
     /* Header */
     nav {
         display: block;
@@ -281,7 +290,7 @@ main {
         display: flex;
     }
 
-    #menu>li {
+    #menu > li {
         padding-left: 1rem;
     }
 
@@ -294,7 +303,6 @@ main {
         line-height: 75px;
         margin: 0 0.5rem;
     }
-
 
     /* Main content */
     main {
@@ -316,23 +324,22 @@ main {
         width: 100%;
     }
 
-    #benefits-physical>div,
-    #benefits-mental>div {
+    #benefits-physical > div,
+    #benefits-mental > div {
         width: 75%;
     }
 
-    #benefits-mental>div {
+    #benefits-mental > div {
         text-align: end;
         align-self: flex-end;
     }
 
+    /* Gallery */
     #photos {
         column-count: 3;
-        column-gap: 0;
     }
 
-    /* Signup page */
-
+    /* Form */
     #signup {
         background-position: center;
         position: relative;
@@ -357,42 +364,40 @@ main {
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
-    #menu a:hover {
-        border-bottom: 1px solid #3a3a3a;
-    }
-}
-/* Media query: Laptops and larger (992px and up) */
-@media screen and (min-width:992px) {
-    #menu a:hover {
+    #menu a:hover{
         border-bottom: 1px solid #3a3a3a;
     }
 
+    /* Gallery */
     #photos {
         column-count: 4;
-        column-gap: 0; 
+    }
 }
-}
-/* Media Query : Wider Screens 1200px and wider */
-@media screen and (min-width:1200px) {
+
+@media screen and (min-width: 1200px) {    
+    /* Reasons section */
     #benefits {
-        display:flex;
+        display: flex;
         flex-direction: row;
     }
 
     #benefits > div {
         flex: 1;
     }
-    #benefits-image {
-        order: 0;
-    }
-    #benefits-mental {
-        order: 1
-    }
-    #benefits-mental > div {
-align-self: flex-start;
-    }
-#benefits-physical > div {
-align-self: flex-end;
-}
 
+    #benefits-image { 
+        order: 0
+    }
+
+    #benefits-mental {
+        order: 1;
+    }
+
+    #benefits-mental > div {
+        align-self: flex-start;
+    }
+
+    #benefits-physical > div {
+        align-self: flex-end;
+    }
 }
